 * Added new EPScript method render_data_row
 * Added phrase to go with it.
 * Used this to shorten the summary_page.xml file.

2009-06-04 cjg
 * New Script method: property() which takes a string and returns a property
    from a hash or dataobj.
 * Removed render_data_row() method as it's not needed after all.
 * Removed the data_row phrase too.
 * Reworked summary_page.xml to iterate over a list of fields from
    eprint_render.pl

2009-06-05 tdb/dct05r
 * Added Sun Cloud Storage Service support

2009-06-08 tdb
 * Added a prepare_select() method that allows x-database LIMITS
    [Alexander Bergolth]

2009-06-09 tdb
 * Use fileinfo field to render document links (faster citation rendering)

2009-06-09 tdb
 * Look for document format icons in system as well as the repository

2009-06-09 cjg
 * Added experiemental alternate search method. Not yet used by default.
 * Added *temporary* config option "temp_use_v2_search" to use new style search.

2009-06-09 tdb
 * Fixed schema errors in uketd_dc and METS/MODS export plugins

2009-06-09 cjg
 * Fix new search so that left-joins come after inner joins, a left join is 
    joined to the main table, and it does not merge tables in AND queries
    on sub-tables, but does on OR queries.

2009-06-09 tdb
 * Added two new field types, "counter" and "timestamp"
 * Added MetaField method "get_default_value"
 * All data objects now use counters and timestamps to get ids and timestamps

2009-06-10 tdb
 * Removed has_table from version checks and drop_table

2009-06-10 tdb
 * Added "get_static_dirs()" method to repository, fixes icon_url() not
    getting icons from the system directories

2009-06-10 tdb
 * Support long values in browse views by using the MD5 of the value,
    fixing #3482

2009-06-15 tdb
 * Refactoured XML importing to embed the translation inside objects/fields

2009-06-16 cjg
 * Converted Admin screen into several tabs.

2009-06-18 tdb
 * Set the parent of subobjects wherever possible to reduce DB retrievals
